--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="col-md-12 wow slideInLeft">
                     <div id="testimonial-carousel" class="owl-carousel col-md-12">
                         <div class="single-client col-md-6">
-                            <img src="my img/My-image.png" alt="" />
+                            <img src="my img/my-image.png" alt="" />
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eleifend metus dapibus tincidunt suscipit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <ul class="list-unstyled">
                                 <li><a href=""><i class="fa fa-star"></i></a></li>
@@ -206,7 +206,7 @@
                             </ul>
                         </div>
                         <div class="single-client col-md-6">
-                            <img src="My IMG/My-image.png" alt="" />
+                            <img src="my img/my-image.png" alt="" />
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eleifend metus dapibus tincidunt suscipit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <ul class="list-unstyled">
                                 <li><a href=""><i class="fa fa-star"></i></a></li>
