--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-7">
-                    <img class="wow slideInLeft" src="My IMG/image2/Apple iPhone 14 front and back PNG.png" alt="" />
+                    <img class="wow slideInLeft" src="my img/image2/apple iPhone 14 front and back pmg.png" alt="" />
 
 
                 </div>
